<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/editable_lib_name"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/editable_lib_name" />

        <Button
            android:id="@+id/ns_load_certain_lib"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/ns_load_certain_lib" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/ns_load_public_lib"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/ns_load_public_lib" />

        <Button
            android:id="@+id/ns_load_private_lib"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/ns_load_private_lib" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/ns_load_greylist_lib"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/ns_load_greylist_lib" />

        <Button
            android:id="@+id/ns_load_faked_lib"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/ns_load_faked_lib" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/ns_multi_classloader"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/ns_multi_classloader" />

        <Button
            android:id="@+id/ns_multi_lib_instance"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/ns_multi_lib_instance" />
    </LinearLayout>

    <Button
        android:id="@+id/load_from_zip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/load_from_zip" />

    <Button
        android:id="@+id/dl_unwind_find_exidx"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dl_unwind_find_exidx" />

    <Button
        android:id="@+id/indirect_dependent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/indirect_dependent" />

    <Button
        android:id="@+id/ns_check_armpath"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ns_check_armpath" />

    <TextView
        android:id="@+id/linker_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/default_text" />

</LinearLayout>
