<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical" >

    <Button
        android:id="@+id/try_create_file_android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/try_create_file_android" />

    <Button
        android:id="@+id/try_open_file_android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/try_open_file_android" />

    <Button
        android:id="@+id/try_create_file_standalone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/try_create_file_standalone" />

    <Button
        android:id="@+id/try_open_file_standalone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/try_open_file_standalone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/get_abi_native"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/get_abi_native" />

        <Button
            android:id="@+id/get_os_arch"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/get_os_arch" />
    </LinearLayout>

    <Button
        android:id="@+id/get_cpuinfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_cpuinfo" />

    <TextView
        android:id="@+id/misc_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/default_text" />

</LinearLayout>
