<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical" >

    <Button
        android:id="@+id/ns_load_public_lib"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ns_load_public_lib" />

    <Button
        android:id="@+id/ns_load_private_lib"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ns_load_private_lib" />

    <Button
        android:id="@+id/ns_load_greylist_lib"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ns_load_greylist_lib" />

    <TextView
        android:id="@+id/namespace_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/namespace_text" />

</LinearLayout>
